src/objects/Apttus_Config2__CostAdjustment__c.object
<CustomObject>
    <description>Represents an adjustment to the cost of a product/service</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Adjustment as percentage or currency amount</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>Type of cost adjustments</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Percent</fullName>
                </value>
                <value>
                    <fullName>Markup Percent</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>Description of the discount</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>Reference to the master line item record</description>
        <inlineHelpText>Reference to the master line item record</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Cost Adjustments</relationshipLabel>
        <relationshipName>CostAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Represents sequence of cost adjustment within a given charge line item.</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cost Adjustment</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Cost Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>